# couchbase-transactions-cxx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENCE.md  README.md  library.h
cmake/Modules/: FindFolly.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt  game_server.cxx  json11_parser.hxx
include/couchbase/: support.hxx  support.hxx.in  transactions.hxx
include/couchbase/client/: bucket.hxx  cluster.hxx  collection.hxx  exceptions.hxx  lookup_in_spec.hxx  mutate_in_spec.hxx  options.hxx  result.hxx  transcoder.hxx
include/couchbase/transactions/: active_transaction_record.hxx  async_attempt_context.hxx  atr_cleanup_entry.hxx  atr_entry.hxx  attempt_context.hxx  attempt_context_testing_hooks.hxx  attempt_state.hxx  cleanup_testing_hooks.hxx  client_record.hxx  configuration.hxx  doc_record.hxx  document_metadata.hxx  durability_level.hxx  exceptions.hxx  logging.hxx  per_transaction_config.hxx  result.hxx  staged_mutation.hxx  testing_hooks.hxx  transaction_attempt.hxx  transaction_config.hxx  transaction_context.hxx  transaction_document.hxx  transaction_document_status.hxx  transaction_fields.hxx  transaction_get_result.hxx  transaction_keyspace.hxx  transaction_links.hxx  transaction_query_options.hxx  transaction_result.hxx  transactions_cleanup.hxx  transcoder.hxx  uid_generator.hxx
include/couchbase/transactions/internal/: atr_cleanup_entry.hxx  atr_entry.hxx  doc_record.hxx  exceptions_internal.hxx  transaction_context.hxx  transaction_fields.hxx  transactions_cleanup.hxx  utils.hxx
include/libcouchbase/: bucket.hxx  cluster.hxx  collection.hxx  lookup_in_spec.hxx  mutate_in_spec.hxx  result.hxx  transactions.hxx
include/libcouchbase/transactions/: attempt_context.hxx  attempt_state.hxx  client_record.hxx  configuration.hxx  durability_level.hxx  logic.hxx  result.hxx  staged_mutation.hxx  transaction_context.hxx  transaction_document.hxx  transaction_document_status.hxx  transaction_fields.hxx  transaction_links.cxx  transaction_links.hxx  transactions_cleanup.hxx  uid_generator.hxx
scripts/: build-file-manifest  check-clang-static-analyzer
scripts/jenkins/: build-deb  build-rpm  build-srpm  build-tarball  check-clang-format  check-clang-static-analyzer  prepare-cowbuilder
scripts/jenkins/pkg/: exclude.txt
scripts/jenkins/pkg/deb/: rules
scripts/jenkins/pkg/rpm/: couchbase-transactions.spec
src/: atr_ids.cxx  atr_ids.hxx  attempt_context.cxx  bucket.cxx  client_record.cxx  cluster.cxx  collection.cxx  configuration.cxx  lookup_in_spec.cxx  mutate_in_spec.cxx  result.cxx  staged_mutation.cxx  transaction_context.cxx  transaction_document.cxx  transaction_links.cxx  transactions.cxx  transactions_cleanup.cxx  uid_generator.cxx
src/client/: bucket.cxx  cluster.cxx  collection.cxx  logging.cxx  logging.hxx  lookup_in_spec.cxx  mutate_in_spec.cxx  pool.hxx  result.cxx
src/transactions/: active_transaction_record.cxx  active_transaction_record.hxx  atr_cleanup_entry.cxx  atr_cleanup_entry.hxx  atr_entry.hxx  atr_ids.cxx  atr_ids.hxx  attempt_context.cxx  attempt_context_impl.cxx  attempt_context_impl.hxx  attempt_context_testing_hooks.hxx  binary_utils.cxx  binary_utils.hxx  cleanup_testing_hooks.hxx  client_record.cxx  client_record.hxx  configuration.cxx  doc_record.hxx  error_list.hxx  exceptions.cxx  exceptions_internal.hxx  forward_compat.hxx  logging.cxx  logging.hxx  result.cxx  result.hxx  staged_mutation.cxx  staged_mutation.hxx  transaction_attempt.cxx  transaction_attempt.hxx  transaction_config.cxx  transaction_context.cxx  transaction_context.hxx  transaction_document.cxx  transaction_fields.hxx  transaction_get_result.cxx  transaction_links.cxx  transaction_query_options.cxx  transactions.cxx  transactions_cleanup.cxx  (+5 more)
tests/: config.json
tests/client/: client_env.h  pool_t.cpp  simple_t.cpp  simple_threaded_t.cpp  subdoc_t.cpp  transcoder_t.cpp
tests/include/: environment.h
tests/transactions/: logging_t.cpp  simple_async_t.cpp  simple_t.cpp  simple_threaded_t.cpp  transaction_context_t.cpp  transactions_env.h  utils_t.cpp  waitable_op_list_t.cpp
